--- a/index.html
+++ b/index.html
@@ -1,27 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Logan Monday - Portfolio</title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Logan Monday-Portfolio</title>
+</head>
 <body>
 
-<nav>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="projects.html">My Projects</a></li>
-        <li><a href="contact.html">Contact</a></li>
-    </ul>
-</nav>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="projects.html">My Projects</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="resume.html">Resume</a></li>
+        </ul>
+    </nav>
         
-        <h1>Welcome to My Website!</h1>
+    <h1>Welcome to My Website!</h1>
 
-        <img src="Personal_Website_Logan_Monday_Photo.jpg"
+    <img src="Personal_Website_Logan_Monday_Photo.jpg" alt="A photo of Logan Monday" width="450" height="500">
 
-        <h2>About Me</h2>
-        <p>Hi, Logan Monday! I'm an aspiring web developer with a passion for creating engaging and user-friendly websites. I'm currently learning HTML, CSS, and JavaScript, and I'm excited to build cool projects and expand my skills. </p>
+    <h2>About Me</h2>
 
+    <p>Hi, I'm Logan Monday! I'm an aspiring web developer with a passion for creating engaging and user-friendly websites. I'm currently learning HTML, CSS, and JavaScript, and I'm excited to build cool projects and expand my skills. </p>
+
+    <p>I've always been fascinated by technology, and how it can be used to solve problems, and improve people's lives. That's what drew me to web development-the ability to create tools, and experiences that are both functional, and beautiful.</p>
+
+    <p>I've always been a curious, and analytical person, with a know for problem-solving, and a keen eye for detail. I enjoy tackling challenges, and finding creative solutions, and I'm meticulous about ensuring accuracy, and precision in my work. These skills have been invaluable in my journey to learn web development, where logic, structure, and attention to detail are essential.</p>
+
+    <p>In my free time, I enjoy exploring various interests, including productivity techniques, philosphy, neuroscience, spirituality, and psychology. I find it fascinating to learn how the human mind works, and how we can optimize our thinking, and behavior. I'm also interested in the intersection of technology, and human potential, particularly in areas like artificial intelligence, and DevOps engineering. I believe that technology can be a powerful tool for personal, and societal growth, and I'm excited to contribute to that progress through my work in web development.</p>
+
+    <p>My goal is to become a skilled front-end developer, and contribute to creating interactive, and impactful web experiences. I'm particularly interested in the art of building websites that are both visually appealing, and user-friendly. I'm also passionate about crafting intuitive, and engaging user interfaces that enhance the overall experience.</p>
+
+    <h2>Skills</h2>
+
+    <h3>Technical Skills</h3>
+    <ul>
+        <li>HTML</li>
+        <li>CLI (Command Line Interface)</li>
+    </ul>
+
+    <h3>Soft Skills</h3>
+    <ul>
+        <li>Problem-Solving</li>
+        <li>Attention to Detail</li>
+        <li>Communication</li>
+        <li>Teamwork</li>
+    </ul>
+    
     <h2>My Hobbies</h2>
     <ul>
         <li>Spending time coding, and experimenting with new technologies.</li>
@@ -34,6 +60,16 @@
         <li><a href="https://www.linkedin.com/in/loganmonday/">LinkedIn Profile</a></li>
         <li><a href="https://stackoverflow.com/users/26329051/logan-monday">Stack Overflow Profile</a></li>
     </ul>
+
+    <footer>
+        <p>&copy; 2025 Logan Monday. All rights reserved.</p>
+
+        <h2>Connect With Me</h2>
+        <ul>
+            <li><a href="https://www.linkedin.com/in/loganmonday" target="_blank">Connect with me on LinkedIn.</a></li>
+            <li><a href="https://stackoverflow.com/users/26329051/logan-monday" target="_blank">See my Stack Overflow activity.</a></li>
+        </ul>
+    </footer>
 
 </body>
 </html>
