--- a/projects.html
+++ b/projects.html
@@ -6,16 +6,29 @@
     <title>Logan Monday - My Projects</title>
 </head>
 <body>
-<nav>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="projects.html">My Projects</a></li>
-        <li><a href="contact.html">Contact</a></li>
-    </ul>
-</nav>
-<h1>My Projects</h1>
-<h2>Top 3 Inspiring Artists</h2>
-<p>This website showcases my top 3 favorite musical artists using HTML. It was my 1st web development project, and I learned the fundaments of sturcturing content with HTML elements, like headings, paragraphs, lists, and images.</p>
-<a href="https://loganmonday23.github.io/my-first-project/" target="_blank">View Project</a> <a href="https://github.com/loganmonday23/my-first-project" target="_blank">GitHub Repo</a>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="projects.html">My Projects</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="resume.html">Resume</a></li>
+        </ul>
+    </nav>
+    
+    <h1>My Projects</h1>
+    <h2>Top 3 Inspiring Artists</h2>
+    <p>This website showcases my top 3 favorite musical artists using HTML. It was my 1st web development project, and I learned the fundaments of sturcturing content with HTML elements, like headings, paragraphs, lists, and images.</p>
+    <a href="https://loganmonday23.github.io/my-first-project/" target="_blank">View Project</a> <a href="https://github.com/loganmonday23/my-first-project" target="_blank">GitHub Repo</a>
+
+    <footer>
+        <p>&copy; 2025 Logan Monday. All rights reserved.</p>
+
+        <h2>Connect With Me</h2>
+        <ul>
+            <li><a href="https://www.linkedin.com/in/loganmonday" target="_blank">Connect with me on LinkedIn.</a></li>
+            <li><a href="https://stackoverflow.com/users/26329051/logan-monday" target="_blank">See my Stack Overflow activity.</a></li>
+        </ul>
+    </footer>
+
 </body>
 </html>
